--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 # This is the main page
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Main Page</title>
+</head>
+<body>
+
+<h1>Main Page</h1>
+<p>This is the main page</p>
+
+</body>
+</html>
