--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+<nav>
+  <a href="index.html">Main Page</a>
+  <a href="admin/admin_dashboard.html">Admin Module</a>
+  <a href="search/search_dashboard.html">Search Module</a>
+  <a href="submit/submit_dashboard.html">Submit Module</a>
+</nav>
 <h1>Main Page</h1>
-<p>This is the main page</p>
+<h3>This is the main page of our Project</h2>
 
 </body>
 </html>
