--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -1,1 +1,20 @@
-# This is the admin dashboard
+<!-- This is the admin dashboard -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Admin Dashboard</title>
+<link rel="stylesheet" href="../assets/css/style.css">
+</head>
+<body>
+<nav>
+  <a href="../index.html">Main Page</a>
+  <a href="admin_dashboard.html">Admin Module</a>
+  <a href="../search/search_dashboard.html">Search Module</a>
+  <a href="../submit/submit_dashboard.html">Submit Module</a>
+</nav>
+<h1>Admin Dashboard</h1>
+<h3>This is the Admin Dashboard Module</h2>
+
+</body>
+</html>
