--- a/search/search_dashboard.html
+++ b/search/search_dashboard.html
@@ -1,1 +1,20 @@
-# Search dashboard file
+<!-- This is the search dashboard -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Search Dashboard</title>
+<link rel="stylesheet" href="../assets/css/style.css">
+</head>
+<body>
+<nav>
+  <a href="../index.html">Main Page</a>
+  <a href="../admin/admin_dashboard.html">Admin Module</a>
+  <a href="search_dashboard.html">Search Module</a>
+  <a href="../submit/submit_dashboard.html">Submit Module</a>
+</nav>
+<h1>Search Dashboard</h1>
+<h3>This is the Search Dashboard Module</h2>
+
+</body>
+</html>
