--- a/submit/submit_dashboard.html
+++ b/submit/submit_dashboard.html
@@ -1,1 +1,20 @@
-# This is the submit dashboard
+<!-- This is the submit dashboard -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Submit Dashboard</title>
+<link rel="stylesheet" href="../assets/css/style.css">
+</head>
+<body>
+<nav>
+  <a href="../index.html">Main Page</a>
+  <a href="../admin/admin_dashboard.html">Admin Module</a>
+  <a href="../search/search_dashboard.html">Search Module</a>
+  <a href="submit_dashboard.html">Submit Module</a>
+</nav>
+<h1>Submit Dashboard</h1>
+<h3>This is the Submit Dashboard Module</h2>
+
+</body>
+</html>
